<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TaskOrganizer</string>
    <string name="title_section1">Task</string>
    <string name="title_section2">+</string>
    <string name="title_section3">Complete</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="action_logout">Log out</string>
    <string name="action_about">About</string>
    <string name="action_archive">Archive</string>
    <string name="Settings_display_message">Settings</string>
    <string name="complete">you have completed the following<br /> and the following <br />and the following </string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="new_user">New user? <u>Sign Up here!</u></string>
   
    <string name="track_time_text">Tracking Period (days)</string>
    <string name="track_time_text_error">Tracking Period (days)\n<font fgcolor="red">Invalid value (1-30)</font></string>
	
	<string name="archive_expire_text">archived data expires after (days)</string>
	<string name="archive_expire_text_error">archived data expires after (days)\n<font fgcolor="red">Invalid value (1-90)</font></string>
	
    <string-array name="list_view">
        <item>All</item>
        <item>High Priority</item>
        <item>Past Due</item>
        <item>Complete</item>
        <item>Incomplete</item>
    </string-array>
    
</resources>