<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gharseldin.taskorganizer.SignInActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
     <item
        android:id="@+id/action_archive"
        android:orderInCategory="200"
        android:title="@string/action_archive"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="300"
        android:title="@string/action_profile"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="400"
        android:title="@string/action_logout"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="500"
        android:title="@string/action_about"
        app:showAsAction="never"/>

</menu>
